--- a/index.html
+++ b/index.html
@@ -1,3 +1,34 @@
 ---
 layout: default
 ---
+
+<div class="container ">
+    <h3 class=" text-center">This page isn't very important right now so this content will come at a later
+        time. <br> In the mean time click the icons below for my social links.</h3>
+    <div style="padding-bottom: 1.5rem"></div>
+    <hr style="background-color: white;">
+    <div class="row text-center text-light">
+        <div class="col-12 col-md-4 col-lg-4 ">
+            <a href="https://www.twitter.com/themonkeycop" target="_blank">
+                <img src="http://themonkeycop.tv/images/twitter.png" alt="Logo" style="width:19vh; ">
+                <div style="padding-bottom: 0.8rem"></div>
+                <p style="">Twitter - @TheMonkeyCop</p>
+            </a>
+        </div>
+        <div class="col-12 col-md-4 col-lg-4 ">
+            <a href="https://discordapp.com/invite/dbCM7fX" target="_blank">
+                <img src="http://themonkeycop.tv/images/discord.png" alt="Logo" style="width:15vh; ">
+                <div style="padding-bottom: 0.5rem"></div>
+                <p style="">Discord</p>
+            </a>
+        </div>
+        <div class="col-12 col-md-4 col-lg-4">
+            <a href="https://www.twitch.com/themonkeycop" target="_blank">
+                <img src="http://themonkeycop.tv/images/twitch.png" alt="Logo" style="width:14vh; ">
+                <div style="padding-bottom: 0.5rem"></div>
+                <p style="">Twitch - TheMonkeyCop</p>
+            </a>
+        </div>
+    </div>
+    <hr style="background-color: white;">
+</div>
